# vos

./: CMakeLists.txt
cmake/: vos.cmake
qemu-root/: NvVars
qemu-root/efi/boot/: bootx64.efi
src/bootloader/: CMakeLists.txt
src/bootloader/efi/: CMakeLists.txt  loader.c  loader.h  main.c
src/bootloader/efi/util/: CMakeLists.txt  efi_util.h  lib.c  lib.h  log.c  log.h
src/bootloader/mbr/: CMakeLists.txt  mbr.ld  mbr.nasm  segment_util.nasm
